2008-09-20  Jonathan Pryor  <jpryor@novell.com>

	* mkeithers: Added; generates Mono.Rocks/Eithers.cs.
	* Makefile: Generate Mono.Rocks/Eithers.cs with mkeithers.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Eithers.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/EitherTest.cs to the build.

2008-09-18  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/index.xml, doc/en/Mono.Rocks/Maybe`1.xml: Flush.
	* doc/en/Mono.Rocks/IEnumerableRocks.xml: Document .SelectFromEach() 
	  and .Zip().

2008-09-18  Jonathan Pryor  <jpryor@novell.com>

	* doc/Makefile.include: For VS.NET users, export XML Documentation into
	  Mono.Rocks.xml.

2008-09-18  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/NaturalStringComparer.xml: Document.
	* doc/en/Mono.Rocks/Maybe`1.xml: Threading Safety Statement.

2008-09-17  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/Maybe`1.xml: Document Maybe<T>.

2008-09-17  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/index.xml, doc/en/Mono.Rocks/Maybe.xml,
	  doc/en/Mono.Rocks/MaybeRocks.xml: Document Maybe & MaybeRocks.

2008-09-16  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/Sequence.xml: Document Sequence.

2008-09-15  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Document StringRocks.

2008-09-14  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Remove Mono.Rocks/Cons.cs 
	  from the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Remove
	  Tests/Mono.Rocks.Tests/ConsTest.cs from the build.
	* doc/en/**: Flush Cons<T> removal.

2008-09-12  Jonathan Pryor  <jpryor@novell.com>

	* mktuples: Add .Match() method, which is a "nicer" version of
	  ObjectRocks.Match() for use with tuples.
	* doc/fixup.sed: Allow .Match() documentation to be imported.
	* doc/en/**: Flush.

2008-09-11  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.
